manifests/nginx-dummy/nginx-dummy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dummy
  labels:
    app: nginx-dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dummy
  template:
    metadata:
      labels:
        app: nginx-dummy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx-dummy
          image: nginxinc/nginx-unprivileged:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dummy-svc
  labels:
    app: nginx-dummy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nginx-dummy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nishantpansuriya.space
    secretName: nishantpansuriya-tls
  rules:
  - host: nishantpansuriya.space
    http:
      paths:
      - path: /nginx-dummy(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-dummy-svc
            port:
              number: 80
